# basefwx

./: .branch-parity-allowlist  .branch-sync-exclude  .gitignore  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  CROSS_LANGUAGE_GUIDE.md  JMG_BENCHMARK_IMPLEMENTATION.md  LICENCE  LICENSING.md  MANIFEST.in  PLUGIN_3.7.0_HANDOFF.md  README.md  RELEASE-NOTES-3.6.4.md  RELEASE-NOTES-3.7.0.md  RELEASE_NOTES_3.6.0.md  SECURITY.md  _config.yml  benchmark.html  index.html  jmg_sample.m4a  main.py  org.py  pyproject.toml  setup.py  test.py  test_output.txt
.github/: CODEOWNERS  FUNDING.yml  virustotal-fp-allowlist.json
.github/codeql/: codeql-config.yml
AI_gen/: CROSS_LANGUAGE_GUIDE.md  CROSS_LANGUAGE_QUICK_START.md
LICENSES/: MIT.txt
_layouts/: doc.html
assets/: site.css  site.js
basefwx/: __init__.py  main.py  yubikey_pq.py
basefwx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cpp/: CMakeLists.txt  README.md  test_codec  test_codec.cpp  vcpkg-configuration.json  vcpkg.json
cpp/cmake/: WriteCliBuildStamp.cmake
cpp/include/basefwx/: an7.hpp  archive.hpp  base64.hpp  basefwx.hpp  cli_colors.hpp  codec.hpp  constants.hpp  crypto.hpp  crypto_utils.hpp  ec.hpp  env.hpp  file_stream.hpp  filecodec.hpp  format.hpp  fwxaes.hpp  imagecipher.hpp  keywrap.hpp  livecipher.hpp  metadata.hpp  obfuscation.hpp  pb512.hpp  plugin.h  plugin.hpp  plugin_loader.hpp  plugin_static.hpp  pq.hpp  runtime.hpp  system_info.hpp
cpp/include/basefwx/cli/: bench.hpp  globals.hpp  inspect.hpp  options.hpp  output.hpp  password.hpp  telemetry.hpp
cpp/src/: an7.cpp  archive.cpp  base64.cpp  basefwx.cpp  basefwx_kfm.cpp  basefwx_kfm_carriers.cpp  basefwx_kfm_internal.hpp  cli_colors.cpp  codec.cpp  crypto.cpp  ec.cpp  env.cpp  filecodec.cpp  filecodec_b512.cpp  filecodec_impl.cpp  filecodec_internal.hpp  filecodec_pb512.cpp  format.cpp  fwxaes.cpp  imagecipher.cpp  imagecipher_common.cpp  imagecipher_image.cpp  imagecipher_internal.hpp  imagecipher_media.cpp  imagecipher_media_support.cpp  imagecipher_media_transform.cpp  imagecipher_trailer.cpp  keywrap.cpp  livecipher.cpp  main.cpp  metadata.cpp  obfuscation.cpp  pb512.cpp  plugin_loader.cpp  pq.cpp  system_info.cpp
cpp/src/cli/: bench.cpp  globals.cpp  inspect.cpp  options.cpp  output.cpp  password.cpp  telemetry.cpp
cpp/src/crypto/: crypto.cpp  ec.cpp  keywrap.cpp  livecipher.cpp  pb512.cpp  pq.cpp
cpp/src/file/: filecodec.cpp  filecodec_b512.cpp  filecodec_impl.cpp  filecodec_internal.hpp  filecodec_pb512.cpp  fwxaes.cpp
cpp/src/formats/: an7.cpp  archive.cpp  basefwx.cpp  basefwx_kfm.cpp  basefwx_kfm_carriers.cpp  basefwx_kfm_internal.hpp  codec.cpp  format.cpp  metadata.cpp  obfuscation.cpp
cpp/src/jni/: basefwx_jni.cpp
cpp/src/media/: imagecipher.cpp  imagecipher_common.cpp  imagecipher_image.cpp  imagecipher_media_support.cpp  imagecipher_trailer.cpp
cpp/src/platform/: cli_colors.cpp  env.cpp  system_info.cpp
cpp/src/plugin/: plugin_loader.cpp
debian/: README.source  basefwx.docs  basefwx.install  basefwx.manpages  changelog  control  copyright  libbasefwx-dev.install  libbasefwx3.docs  libbasefwx3.install  libbasefwx3.manpages  rules  watch
debug/: bench_a512.py
docs/: CLI.md  CONTRIBUTING.md  EXPLAINED.md  RELEASE.md  SECURITY_MODEL.md  TESTING.md  index.html
examples/plugins/aead-wrapped-keyed/: CMakeLists.txt  aead_wrapped_keyed.cpp
examples/plugins/passthrough/: CMakeLists.txt  passthrough.c
examples/plugins/static-embed/: CMakeLists.txt  static_embed_demo.cpp
examples/plugins/time-tweak/: CMakeLists.txt  time_tweak.cpp
examples/plugins/xor-rotate/: CMakeLists.txt  xor_rotate.cpp
examples/plugins/xor-rotate-py/: pyproject.toml  xor_rotate_py.py
java/: README.md  build.gradle  settings.gradle
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/basefwx/: __init__.py  __main__.py  _aes_file.py  _an7.py  _b512_common.py  _b512_memory.py  _b512_obfuscation.py  _b512_stream.py  _b512file.py  _cli.py  _codecs_n10.py  _codecs_str.py  _file_ops.py  _fwxaes.py  _jmg.py  _kdf.py  _kfm.py  _master_key.py  _media.py  _media_image.py  _media_pipeline.py  _media_shared.py  _media_support.py  _media_trailer.py  _media_transforms.py  _obf.py  _primitives.py  _progress.py  _repo_version.py  api_files.py  api_media.py  api_strings.py  legacy.py  main.py  plugin.py  version.py  yubikey_pq.py
python/basefwx/crypto/: _aes_file.py  _an7.py  _codecs_n10.py  _codecs_str.py  _fwxaes.py  _jmg.py  _kdf.py  _kfm.py  _master_key.py  _obf.py  _primitives.py
python/basefwx/file/: _b512_common.py  _b512_memory.py  _b512_obfuscation.py  _b512_stream.py  _b512file.py  _file_ops.py
python/basefwx/media/: _media.py  _media_image.py  _media_pipeline.py  _media_shared.py  _media_support.py  _media_trailer.py  _media_transforms.py
python/basefwx/runtime/: _cli.py  _progress.py  _repo_version.py
python/scripts/: extract_remaining.py  split_legacy.py
python/tests/: test_basefwx.py
python/tools/: format_vt_results.py
results/: benchmarks-latest.json  benchmarks-latest.txt  benchmarks-manual-20260104-050425.json  benchmarks-manual-20260104-050425.txt  benchmarks-manual-20260104-065149.txt  benchmarks-manual-20260104-204946.txt  benchmarks-manual-20260104-225812.json  benchmarks-manual-20260106-120524.txt  benchmarks-manual-20260106-210204.json  benchmarks-manual-20260107-042135.json  benchmarks-manual-20260107-042135.txt  benchmarks-manual-20260107-155928.txt  benchmarks-manual-20260108-121213.txt  benchmarks-manual-20260108-160704.json  benchmarks-manual-20260208-031803.json  benchmarks-manual-20260208-031803.txt  benchmarks-pre-release.json  benchmarks-pre-release.txt  virustotal-v3.5.3.json
scripts/: check_branch_parity.sh  check_version_sync.py  format_vt_results.py  generate_test_media.py  leak_detect.py  leak_detect_cpp.sh  make_debian_orig.sh  plugin-smoke.sh  prepare_license_update.py  release_manifest.py  test_all.sh  test_cpp.sh  test_cross_lang.sh  test_java.sh  test_py.sh  virustotal_release_scan.py
tests/: custom.py  test_basefwx.py
website/: index.html
(+189 files in other folders)
