[project]
name = "basefwx"
version = "3.3.1"
authors = [
  { name="F1xGOD", email="f1xgodim@gmail.com" },
]
description = "With BaseFWX you can encode securely!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pqcrypto>=0.3.4"
]

[project.urls]
Homepage = "https://github.com/F1xGOD/basefwx"
Issues = "https://github.com/F1xGOD/basefwx/issues"
TermsConditions = "https://www.fixcraft.org/terms-conditions"
PrivacyPolicy = "https://www.fixcraft.org/privacy-policy"
